--- a/NFCWriterPal/app/src/main/res/values/strings.xml
+++ b/NFCWriterPal/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
 
     <string name="write_result_zero">Write Operation Successful</string>
     <string name="write_result_default">NULL</string>
-    <string name="title_activity_read">ReadActivity</string>
+    <string name="title_activity_read">Read Tag</string>
     <string name="title_activity_message_selection">Message Selection</string>
 
 
@@ -85,7 +85,7 @@
     <string name="ms_hms">Home Management System</string>
 
 
-    <string name="title_activity_write">WriteActivity</string>
+    <string name="title_activity_write">Write To Tag</string>
 
 
     <string name="write_header_request_type">Request Type:</string>
