--- a/NFCWriterPal/app/src/main/res/values/strings.xml
+++ b/NFCWriterPal/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="format">Format</string>
     <string name="enter">Enter</string>
     <string name="cancel">Cancel</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
     <string name="save_and_write">Save &amp; Write</string>
     <string name="http">HTTP</string>
     <string name="https">HTTPS</string>
@@ -36,6 +38,7 @@
     <string name="tag_unknown">Tag Type Unknown</string>
     <string name="record_type">Type:</string>
     <string name="record_size">Size:</string>
+    <string name="read_writable">Writable</string>
 
 
     <string name="tap_dialog_title">Tap Phone off NFC Tag</string>
