--- a/NFCWriterPal/app/src/main/res/values/strings.xml
+++ b/NFCWriterPal/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="write">Write</string>
     <string name="read">Read</string>
     <string name="format">Format</string>
+    <string name="share">Share</string>
     <string name="enter">Enter</string>
     <string name="cancel">Cancel</string>
     <string name="yes">Yes</string>
@@ -100,4 +101,9 @@
     <string name="write_header_app_name">App:</string>
     <string name="title_activity_hms">HMSActivity</string>
     <string name="title_activity_format">Format</string>
+
+
+    <string name="title_activity_share">Share</string>
+    <string name="share_title">Think this app is fantastic?</string>
+    <string name="share_subtitle">Why not share it with your friends?</string>
 </resources>
