Updated nav bar title string resources

--- a/NFCWriterPal/app/src/main/res/values/strings.xml
+++ b/NFCWriterPal/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="saved_functions">Saved functions</string>
     <string name="share">Share</string>
     <string name="contact">Contact</string>
+    <string name="communicate">Communicate</string>
 
     <string name="enter">Enter</string>
     <string name="cancel">Cancel</string>
