--- a/NFCWriterPal/app/src/main/res/values/strings.xml
+++ b/NFCWriterPal/app/src/main/res/values/strings.xml
@@ -6,11 +6,6 @@
 
     <string name="action_settings">Settings</string>
 
-    <string name="error_detected">Error detected</string>
-    <string name="ok_writing">Write Successful</string>
-    <string name="error_writing">Error writing to tag</string>
-    <string name="ok_detection">Detected: </string>
-
     <string name="title_activity_app_selection">App Selection</string>
     <string name="title_activity_read">Read Tag</string>
     <string name="title_activity_message_selection">Message Selection</string>
@@ -19,7 +14,6 @@
     <string name="title_activity_format">Format</string>
     <string name="title_activity_contact">Contact</string>
     <string name="title_activity_share">Share</string>
-
 
     <string name="write">Write</string>
     <string name="read">Read</string>
@@ -42,7 +36,6 @@
     <string name="record_type">Type:</string>
     <string name="record_size">Size:</string>
 
-
     <string name="read_tag_id">Tag ID:</string>
     <string name="read_tag_max_size">Tag maximum size:</string>
     <string name="read_tag_current_size">Tag current size:</string>
@@ -53,12 +46,6 @@
     <string name="read_record_list_title">Records on NFC Tag:</string>
     <string name="read_tag_unknown">Tag Type Unknown</string>
     <string name="read_writable">Writable</string>
-
-    <string name="tap_dialog_title">Tap Phone off NFC Tag</string>
-    <string name="tap_dialog_text">Please touch your phone off an NFC tag</string>
-
-    <string name="write_result_zero">Write Operation Successful</string>
-    <string name="write_result_default">NULL</string>
 
     <string name="dialog_webpage_address">Webpage Address</string>
     <string name="dialog_webpage_enter_address">Enter Webpage Address</string>
@@ -76,6 +63,7 @@
     <string name="dialog_hms_script_location">Enter script location (e.g /functions/security)</string>
     <string name="dialog_hms_script_name">Enter Script Name</string>
     <string name="dialog_tap_title">Tap Device Off NFC Tag</string>
+    <string name="dialog_tap_text">Please touch your phone off an NFC tag</string>
     <string name="dialog_unformattable_title">Tag Not Formattable</string>
     <string name="dialog_unformattable_message">Would you like to wipe all data on the tag instead?</string>
 
