--- a/NFCWriterPal/app/src/main/res/values/strings.xml
+++ b/NFCWriterPal/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="share">Share</string>
     <string name="contact">Contact</string>
     <string name="communicate">Communicate</string>
+    <string name="payload">Payload</string>
 
     <string name="enter">Enter</string>
     <string name="cancel">Cancel</string>
@@ -35,9 +36,10 @@
     <string name="bytes">Bytes</string>
     <string name="record_type">Type:</string>
     <string name="record_size">Size:</string>
+    <string name="scan_tag">Scan Tag</string>
 
     <string name="read_tag_id">Tag ID:</string>
-    <string name="read_tag_max_size">Tag maximum size:</string>
+    <string name="read_tag_max_size">Tag maximum memory:</string>
     <string name="read_tag_current_size">Tag current size:</string>
     <string name="read_no_of_messages">Number of NDEF messages:</string>
     <string name="read_no_of_records">Number of NDEF records:</string>
@@ -76,6 +78,7 @@
     <string name="error_longitude">Longitude Required</string>
     <string name="error_ip">IP Address Required</string>
     <string name="error_script">Script Name Required</string>
+    <string name="error_loading_icon">Error in getting icon</string>
 
     <string name="ms_webpage">Webpage</string>
     <string name="ms_email">Email</string>
@@ -85,6 +88,12 @@
     <string name="ms_location">Location</string>
     <string name="ms_hms">Home Management System</string>
 
+    <string name="write_tag_size">Tag Size: </string>
+    <string name="write_msg_size">Message Size: </string>
+    <string name="write_not_writable">Not Writable</string>
+    <string name="write_too_small">Tag size is too small.</string>
+    <string name="write_available">Available:</string>
+    <string name="write_need">Need:</string>
     <string name="write_add_record">Add a record to write</string>
     <string name="write_remove">Remove All</string>
     <string name="write_header_request_type">Request Type:</string>
